--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
         "babel-jest": "^27.0.6",
         "blessed": "^0.1.81",
         "eslint": "^7.29.0",
+        "isomorphic-fetch": "^3.0.0",
         "nodemon": "^2.0.9",
         "ts-node": "^10.0.0",
         "typescript": "^4.3.5"
@@ -23,7 +24,7 @@
     "devDependencies": {
         "@babel/preset-typescript": "^7.14.5",
         "@types/jest": "^26.0.23",
-        "@types/node": "^15.12.5",
+        "@types/node": "^15.14.9",
         "@typescript-eslint/eslint-plugin": "^4.28.1",
         "@typescript-eslint/parser": "^4.28.1",
         "eslint-config-prettier": "^8.3.0",
