--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
         "isomorphic-fetch": "^3.0.0",
         "nodemon": "^2.0.9",
         "ts-node": "^10.0.0",
-        "typescript": "^4.3.5"
+        "typescript": "^4.3.5",
+        "ws": "^8.2.1"
     },
     "scripts": {
         "start:development": "NODE_ENV=development ts-node src/index.ts",
