--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
         "@babel/preset-env": "^7.14.7",
         "@types/blessed": "^0.1.17",
         "babel-jest": "^27.0.6",
+        "bcrypt": "^5.0.1",
         "blessed": "^0.1.81",
         "dotenv": "^10.0.0",
         "eslint": "^7.29.0",
