--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "pm2 delete main.js 2> /dev/null || true &&  pm2 start -f dist/main.js",
+    "start:prod": "pm2 delete dist/main.js 2> /dev/null || true &&  pm2 start -f dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
