--- a/admin/package.json
+++ b/admin/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "prop-types": "^15.7.2",
+    "query-string": "^7.0.1",
     "ra-data-json-server": "^3.18.0",
     "react": "^17.0.2",
     "react-admin": "^3.18.1",
