--- a/admin/package.json
+++ b/admin/package.json
@@ -9,6 +9,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "cypress": "^8.4.0",
+    "faker": "^5.5.3",
     "prop-types": "^15.7.2",
     "query-string": "^7.0.1",
     "ra-data-json-server": "^3.18.0",
