--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,6 @@ services:
     image: postgres
     restart: always
     env_file:
-      - ../kubapostgres.env
+      - .env
     ports:
       - "5432:5432"
